Week Two Challanges/apexexample/force-app/main/default/objects/Class_Roster__c/Class_Roster__c.object-meta.xml
<CustomObject>
    <label>Class Roster</label>
    <nameField>
        <label>Class Roster Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Class Rosters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>