Week Two Challanges/apexexample/force-app/main/default/objects/Class_Roster__c/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <label>Class</label>
    <referenceTo>Class__c</referenceTo>
    <relationshipLabel>Class Rosters</relationshipLabel>
    <relationshipName>Class_Rosters</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>