Week Two Challanges/apexexample/force-app/main/default/objects/Class_Roster__c/fields/Students__c.field-meta.xml
<CustomField>
    <fullName>Students__c</fullName>
    <label>Students</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Class Roster</relationshipLabel>
    <relationshipName>Class_Rosters</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>